{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 145,
  "lineage": "75899d11-e4f8-be75-7b58-903cd57d158e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_office1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fe6b9afe7657b76",
            "arn": "arn:aws:ec2:us-east-2:077492956248:instance/i-015a4dbb832749a4c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015a4dbb832749a4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JoaquinAman-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081387cece4bc01e0",
            "private_dns": "ip-192-168-2-104.us-east-2.compute.internal",
            "private_ip": "192.168.2.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062cf236a299bd6a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082c69c6c90423fd0",
            "tags": {
              "Name": "ec2_office1_with_terraform_test_joaquin_aman"
            },
            "tags_all": {
              "Name": "ec2_office1_with_terraform_test_joaquin_aman"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-094ab9514bd78911b"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.private",
            "aws_subnet.private_subnet2_with_tf_joaquin_aman",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_office2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fe6b9afe7657b76",
            "arn": "arn:aws:ec2:us-east-2:077492956248:instance/i-05ea06961f7b1f666",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ea06961f7b1f666",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JoaquinAman-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da16c328c82d905d",
            "private_dns": "ip-192-168-0-238.us-east-2.compute.internal",
            "private_ip": "192.168.0.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe1a3d1f04c724d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e519d6516419152f",
            "tags": {
              "Name": "ec2_office2_with_terraform_test_joaquin_aman"
            },
            "tags_all": {
              "Name": "ec2_office2_with_terraform_test_joaquin_aman"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-094ab9514bd78911b"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.private",
            "aws_subnet.public_subnet1_with_tf_joaquin_aman",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_office3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fe6b9afe7657b76",
            "arn": "arn:aws:ec2:us-east-2:077492956248:instance/i-04b2fe7bb8691739c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b2fe7bb8691739c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JoaquinAman-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e6d75a94f66ef24",
            "private_dns": "ip-192-168-2-140.us-east-2.compute.internal",
            "private_ip": "192.168.2.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092d0715bece550c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fd02741f453e658",
            "tags": {
              "Name": "ec2_office3_with_terraform_test_joaquin_aman"
            },
            "tags_all": {
              "Name": "ec2_office3_with_terraform_test_joaquin_aman"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-094ab9514bd78911b"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.private",
            "aws_subnet.private_subnet3_with_tf_joaquin_aman",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_remoteoffice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fe6b9afe7657b76",
            "arn": "arn:aws:ec2:us-east-2:077492956248:instance/i-0367b4bb6a5c39946",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0367b4bb6a5c39946",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JoaquinAman-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a0ef94537b9ad94",
            "private_dns": "ip-192-168-2-226.us-east-2.compute.internal",
            "private_ip": "192.168.2.226",
            "public_ip": "3.23.60.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069f978539ce4c16d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022fb99bd30003907",
            "tags": {
              "Name": "ec2_remote_office_with_terraform_test_joaquin_aman"
            },
            "tags_all": {
              "Name": "ec2_remote_office_with_terraform_test_joaquin_aman"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017f846db1f140710"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.allow_ssh",
            "aws_subnet.remote_office_public_subnet4_with_tf_joaquin_aman",
            "aws_vpc.VPC_with_Terraform_joaquin_aman",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_with_terraform_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:internet-gateway/igw-0c6e9b73305ccdfd7",
            "id": "igw-0c6e9b73305ccdfd7",
            "owner_id": "077492956248",
            "tags": {
              "Name": "igw_with_terraform_joaquin_aman"
            },
            "tags_all": {
              "Name": "igw_with_terraform_joaquin_aman"
            },
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_with_terraform_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:route-table/rtb-0c5a7107838dbfacc",
            "id": "rtb-0c5a7107838dbfacc",
            "owner_id": "077492956248",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6e9b73305ccdfd7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_with_terraform_joaquin_aman"
            },
            "tags_all": {
              "Name": "rt_with_terraform_joaquin_aman"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_with_terraform_joaquin_aman",
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_igw_with_terraform_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caef5c8268d466b4",
            "route_table_id": "rtb-0c5a7107838dbfacc",
            "subnet_id": "subnet-022fb99bd30003907"
          },
          "dependencies": [
            "aws_internet_gateway.igw_with_terraform_joaquin_aman",
            "aws_route_table.rt_with_terraform_joaquin_aman",
            "aws_subnet.remote_office_public_subnet4_with_tf_joaquin_aman",
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:security-group/sg-017f846db1f140710",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017f846db1f140710",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "077492956248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:security-group/sg-094ab9514bd78911b",
            "description": "private inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094ab9514bd78911b",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.2.192/26"
                ],
                "description": "private",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "077492956248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_remote"
            },
            "tags_all": {
              "Name": "allow_remote"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2_with_tf_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:subnet/subnet-082c69c6c90423fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c69c6c90423fd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077492956248",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "office_1_private_subnet2_with_tf_joaquin_aman"
            },
            "tags_all": {
              "Name": "office_1_private_subnet2_with_tf_joaquin_aman"
            },
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet3_with_tf_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:subnet/subnet-05fd02741f453e658",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fd02741f453e658",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077492956248",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "office_3_private_subnet3_with_tf_joaquin_aman"
            },
            "tags_all": {
              "Name": "office_3_private_subnet3_with_tf_joaquin_aman"
            },
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1_with_tf_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:subnet/subnet-0e519d6516419152f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.0.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e519d6516419152f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077492956248",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "office_2_public_subnet1_with_tf_joaquin_aman"
            },
            "tags_all": {
              "Name": "office_2_public_subnet1_with_tf_joaquin_aman"
            },
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "remote_office_public_subnet4_with_tf_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:subnet/subnet-022fb99bd30003907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.2.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022fb99bd30003907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077492956248",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remote_office_public_subnet4_with_tf_joaquin_aman"
            },
            "tags_all": {
              "Name": "remote_office_public_subnet4_with_tf_joaquin_aman"
            },
            "vpc_id": "vpc-058b6e3e9c4c93768"
          },
          "dependencies": [
            "aws_vpc.VPC_with_Terraform_joaquin_aman"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_with_Terraform_joaquin_aman",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077492956248:vpc/vpc-058b6e3e9c4c93768",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-0606fb6459c811d56",
            "default_route_table_id": "rtb-0bdc8c50e1ea3236f",
            "default_security_group_id": "sg-059905e165e0f1bd9",
            "dhcp_options_id": "dopt-b75625dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058b6e3e9c4c93768",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdc8c50e1ea3236f",
            "owner_id": "077492956248",
            "tags": {
              "Name": "VPC_with_Terraform_joaquin_aman"
            },
            "tags_all": {
              "Name": "VPC_with_Terraform_joaquin_aman"
            }
          }
        }
      ]
    }
  ]
}